# buttercup

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AKS_DEPLOYMENT.md  CLAUDE.md  CLOUD_REMOVAL.md  CONTRIBUTING.md  CUSTOM_CHALLENGES.md  LICENSE  LOCAL_DEPLOYMENT_PLAN.md  LOCAL_DEPLOYMENT_SUMMARY.md  LOCAL_DEV.md  LOCAL_DEVELOPMENT.md  LOCAL_LITELLM_SETUP.md  MANUAL_SETUP.md  MIGRATION_GUIDE.md  Makefile  QUICK_REFERENCE.md  README.md  SCORED.md  UNSCORED.md  compose.override.yaml  compose.yaml  demo_program_model.sh  env.dev.compose  env.template  fix-litellm-secret.sh  fix_line_lengths.py  justfile  litellm-secret-bug-issue.md  local-dev.sh  protoc.sh  test_precommit.py
common/: README.md  container-entrypoint.sh  pyproject.toml
common/common/: constants.py
common/examples/: build.txt  confirmed_vulnerability.txt  my-task-id-pov.stacktrace  task_download.txt
common/examples/0196a6de-f416-7b71-96df-c0f51a52298d/: build.txt  confirmed_vulnerability.txt
common/examples/example-libpng/: build.txt  confirmed_vulnerability.txt  multi_pov_confirmed_vulnerability.txt  my-task-id-pov.stacktrace  weighted_harness.txt
common/examples/selinux-OSV-2021-902-delta-1/: build.txt  stacktrace.txt  (+2 more)
common/protos/: fuzzer_msg.proto  msg.proto  orchestrator.proto
common/tests/: conftest.py  test_challenge_api.py  test_challenge_task.py  test_corpus.py  test_coverage_map.py  test_get_fuzz_targets.py  test_map.py  test_multiple_reproduce.py  test_node_local.py  test_reliable_queue.py  test_sarif_store.py  test_set.py  test_stack_parser.py  test_task_registry.py
contextualizer/: Makefile  README.md  pyproject.toml
contextualizer/test/: test_init.py
crs_api/: Dockerfile  crs_api_auth.patch  pyproject.toml
crs_api/crs_api/: server.py
fuzzer/: .gitignore  README.md  migrate_to_unified.sh  pyproject.toml
fuzzer/dockerfiles/: runner_image.Dockerfile  unified_fuzzer.Dockerfile
fuzzer/fuzzing_infra/: builder_bot.py  fuzzer_bot.py  orchestrator.py  stimulate_build_bot.py
fuzzer/tests/: test_builder_bot.py  test_coverage_bot.py  test_merger_bot.py  test_runner_proxy.py  test_temp_dir.py  test_tracer_bot.py
fuzzer_runner/: Dockerfile  README.md  pyproject.toml
fuzzer_runner/tests/: test_server.py  test_temp_dir.py
orchestrator/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  task_server_auth.patch
orchestrator/docs/: BroadcastSarifAssessmentApi.md  BundleApi.md  FeeformApi.md  FreeformApi.md  PatchApi.md  PingApi.md  PovApi.md  README.md  RequestApi.md  SarifApi.md  SubmittedSarifApi.md  TypesArchitecture.md  TypesAssessment.md  TypesBundleSubmission.md  TypesBundleSubmissionResponse.md  TypesBundleSubmissionResponseVerbose.md  TypesError.md  TypesFreeformResponse.md  TypesFreeformSubmission.md  TypesFuzzingEngine.md  TypesMessage.md  TypesPOVSubmission.md  TypesPOVSubmissionResponse.md  TypesPatchSubmission.md  TypesPatchSubmissionResponse.md  TypesPingResponse.md  TypesRequestListResponse.md  TypesRequestSubmission.md  TypesSARIFSubmission.md  TypesSARIFSubmissionResponse.md  TypesSarifAssessmentResponse.md  TypesSarifAssessmentSubmission.md  TypesSubmissionStatus.md  TypesVulnSubmission.md  TypesVulnSubmissionResponse.md  VulnerabilityApi.md
orchestrator/scripts/: challenge.py  challenge.sh  custom_task_crs.sh  delete_task.sh  download_all.sh  finals_unpack.sh  generate_competition_api.sh  libxml_task.sh  round_2_sim.sh  send_sarif.sh  task_crs.sh  task_crs_full.sh  task_integration_test.sh  task_upstream_libpng.sh  task_upstream_libucl.sh  update_apis.sh
orchestrator/test/: test_backend.py  test_background_tasks.py  test_broadcast_sarif_assessment_api.py  test_bundle_api.py  test_bundles.py  test_cancellation.py  test_challenge_service.py  test_crs_client.py  test_downloader.py  test_feeform_api.py  test_freeform_api.py  test_patch_api.py  test_patches.py  test_ping_api.py  test_pov_api.py  test_pov_reproducer.py  test_registry.py  test_request_api.py  test_sarif_api.py  test_sarif_matcher.py  test_scheduler.py  test_scheduler_integration.py  test_scratch_cleaner.py  test_server.py  test_submission_tracker.py  test_submissions.py  test_submitted_sarif_api.py  test_types_architecture.py  test_types_assessment.py  test_types_bundle_submission.py  test_types_bundle_submission_response.py  test_types_bundle_submission_response_verbose.py  test_types_error.py  test_types_freeform_response.py  test_types_freeform_submission.py  test_types_fuzzing_engine.py  test_types_message.py  test_types_patch_submission.py  test_types_patch_submission_response.py  test_types_ping_response.py  (+13 more)
patcher/: .dockerignore  Dockerfile  README.md  pyproject.toml
patcher/tests/: test_context_retriever.py  test_patcher.py  test_qe.py  test_reflection.py  test_rootcause.py  test_swe.py  test_utils.py
program-model/: .gitignore  .gitmodules  API.md  Dockerfile  Makefile  README.md  api.md  build_protobuf.sh  challenges.md  dev.md  justfile  load_data.groovy  pyproject.toml  start_cql.sh  start_jg.sh  test-docker.sh  upload_worker.Dockerfile
program-model/conf/: janusgraph-server.yaml  schema.json
program-model/kythe_builder/: Dockerfile  entrypoint.sh
program-model/mock/: api.py  api_graph.py  ready_msg.json  trigger_pm.py
program-model/scripts/: Dockerfile  ccwrapper.sh  compile_and_extract  cxxwrapper.sh
program-model/tests/: common.py  conftest.py  test_api.py  test_codequery.py  test_fuzzy.py  test_get_function_body.py  test_graphdb.py  test_macros.py  test_program_model.py  test_rest_client.py  test_tree_sitter.py
seed-gen/: Dockerfile  Makefile  README.md  pyproject.toml
seed-gen/eval/: vuln_discovery_base.py  vuln_discovery_current.py
seed-gen/test/: conftest.py  test_find_harness.py  test_init.py  test_placeholder.py  test_runner.py  test_sandbox.py  test_seed_explore.py  test_seed_explore_task.py  test_seed_init.py  test_seed_init_task.py  test_task_counter.py  test_utils.py  test_vuln_discovery_delta.py  test_vuln_discovery_delta_task.py  test_vuln_discovery_full.py  test_vuln_discovery_full_task.py
(+617 files in other folders)
