[tool.black]
line-length = 80
target-version = ['py312']

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "crs_api"
version = "0.1.0"
dependencies = [
    "uvicorn",
    "fastapi",
    "urllib3 >= 1.25.3, < 3.0.0",
    "python_dateutil >= 2.8.2",
    "pydantic >= 2",
    "typing-extensions >= 4.7.1",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-xdist",
    "pytest-asyncio",
    "pytest-cov",
    "types-python-dateutil",
    "mypy",
    "tox",
    "flake8",
]
