[project]
name = "fuzzing-infra"
version = "0.1.0"
description = "Automated vulnerability discovery and fuzzing infrastructure"
authors = [{ name = "Trail of Bits", email = "opensource@trailofbits.com" }]
license = "AGPL-3.0-only"
requires-python = ">=3.12,<3.13"
dependencies = [
    "protobuf ==3.20.3",                 # Pin exactly for stability
    "redis ~=5.2.1",
    "clusterfuzz ==2.6.0",               # Pin exactly for stability
    "common",
    "pydantic-settings ~=2.7.1",
    "beautifulsoup4 ~=4.13.3",
    "lxml ~=5.3.1",
]

[project.urls]
Repository = "https://github.com/trailofbits/buttercup"
Issues = "https://github.com/trailofbits/buttercup/issues"

[project.scripts]
buttercup-fuzzer-builder = "buttercup.fuzzing_infra.builder_bot:main"
buttercup-fuzzer = "buttercup.fuzzing_infra.fuzzer_bot:main"
buttercup-coverage-bot = "buttercup.fuzzing_infra.coverage_bot:main"
buttercup-tracer-bot = "buttercup.fuzzing_infra.tracer_bot:main"
buttercup-corpus-sync = "buttercup.fuzzing_infra.corpus_sync:main"
buttercup-corpus-merger = "buttercup.fuzzing_infra.corpus_merger:main"
buttercup-fuzzer-utils = "buttercup.fuzzing_infra.utils_cli:main"

[tool.uv.sources]
common = { path = "../common", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/buttercup"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    # Testing tools
    "pytest ~=8.3.4",
    "pytest-cov ~=6.0.0",
    # Linting and type checking
    "ruff ~=0.12.9",
    "mypy ~=1.17.1",
    # Type stubs
    "types-redis ~=4.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "RET501", "RET505", "PIE790", "B905", "C416", "SIM103", "SIM114"]
ignore = [
    "ISC001",  # Formatter conflicts
    # Still need work:
    "E501",   # Line too long
    "UP006",  # Use built-in collection types for type annotations
    "UP035",  # Import from modern locations instead of deprecated typing
    "UP045",  # Use X | None for type annotations
    "UP046",  # Use modern generic class syntax
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]  # Allow asserts, no docstrings in tests

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = "buttercup"
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = []
