[project]
name = "fuzzing-runner"
version = "0.1.0"
description = "libfuzzer-based fuzzer runner"
authors = [{ name = "Trail of Bits", email = "opensource@trailofbits.com" }]
license = "AGPL-3.0-only"
requires-python = ">=3.12,<3.13"
dependencies = [
    "common",
    "clusterfuzz ==2.6.0",
    "fastapi ~=0.116.1",
    "uvicorn ~=0.35.0",
    "pydantic ~=2.11.7",
]

[project.urls]
Repository = "https://github.com/trailofbits/buttercup"
Issues = "https://github.com/trailofbits/buttercup/issues"

[project.scripts]
buttercup-fuzzer-server = "buttercup.fuzzer_runner.__cli__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/buttercup"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
common = { path = "../common", editable = true }

[dependency-groups]
dev = [
    # Testing tools
    "pytest ~=8.3.4",
    "pytest-cov ~=6.0.0",
    "httpx ~=0.27.0",  # For FastAPI testing
    # Linting and type checking
    "ruff ~=0.12.8",
    "mypy ~=1.17.1",
    # Type stubs
    "types-redis ~=4.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "COM812", "ISC001",  # Formatter conflicts
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]  # Allow asserts, no docstrings in tests

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = "buttercup"
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = []
