[tool.black]
line-length = 80
target-version = ['py312']

[project]
name = "orchestrator"
version = "0.1.0"
description = "Buttercup orchestrator"
readme = "README.md"
authors = [{ name = "Trail of Bits", email = "opensource@trailofbits.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "pydantic>=2.10.5",
    "python-dateutil>=2.9.0.post0",
    "typing-extensions>=4.12.2",
    "urllib3>=2.3.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
orchestrator = "buttercup.orchestrator.__cli__:start_task_server"

[project.optional-dependencies]
tests = [
    "flake8>=7.1.1",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "types-python-dateutil>=2.9.0.20241206",
    "ruff>=0.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buttercup"]
