[project]
name = "patcher"
version = "0.1.0"
description = "Buttercup patcher"
readme = "README.md"
authors = [{ name = "Trail of Bits", email = "opensource@trailofbits.com" }]
license = "AGPL-3.0-only"
requires-python = ">=3.12,<3.13"
dependencies = [
    "common[full]",
    "langchain-community ~=0.3.27",
    "langgraph ~=0.6.6",
    "langgraph-checkpoint ~=2.1.1",
    "openai ~=1.100.2",
    "program-model",
    "pydantic-settings ~=2.7.1",
    "python-dotenv ~=1.0.1",
    "unidiff ~=0.7.5",
]

[project.urls]
Repository = "https://github.com/trailofbits/buttercup"
Issues = "https://github.com/trailofbits/buttercup/issues"

[project.scripts]
buttercup-patcher = "buttercup.patcher.__cli__:main"

[dependency-groups]
dev = [
    # Testing tools
    "pytest ~=8.3.4",
    "pytest-asyncio ~=0.25.2",
    "pytest-cov ~=6.0.0",
    "pytest-xdist ~=3.6.1",
    # Linting and type checking
    "ruff ~=0.12.8",
    "mypy ~=1.17.1",
    # Type stubs
    "types-python-dateutil ~=2.9.0.20241206",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buttercup"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "COM812", "ISC001",  # Formatter conflicts
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]  # Allow asserts, no docstrings in tests

[tool.uv.sources]
common = { path = "../common", editable = true }
program-model = { path = "../program-model", editable = true }

[tool.mypy]
plugins = ['pydantic.mypy']
mypy_path = "src"
packages = "buttercup"
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = []
