[project]
name = "program-model"
version = "0.1.0"
description = "Buttercup contextualizer"
readme = "README.md"
authors = [{ name = "Trail of Bits", email = "opensource@trailofbits.com" }]
license = "AGPL-3.0-only"
requires-python = ">=3.12,<3.13"
dependencies = [
    "common",
    "protobuf ==3.20.3",                 # Pin exactly for stability
    "tree-sitter ~=0.24.0",
    "tree-sitter-language-pack ~=0.4.0",
    "rapidfuzz ~=3.12.2",
]

[project.scripts]
buttercup-program-model = "buttercup.program_model.__cli__:main"

[tool.uv.sources]
common = { path = "../common", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/buttercup"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "pytest ~=8.3.4",
    "ruff ~=0.12.8",
    "mypy ~=1.15.0",
]
test = [
    "pytest ~=8.3.4",
    "pytest-cov ~=6.0.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = "buttercup"
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = []
