[project]
name = "program-model"
version = "0.1.0"
description = "Buttercup contextualizer"
readme = "README.md"
authors = [{ name = "Trail of Bits", email = "opensource@trailofbits" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "common",
    "protobuf (>=3.20, <=3.20.3)",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.4.0",
    "rapidfuzz ~= 3.12.2",
]

[project.scripts]
buttercup-program-model = "buttercup.program_model.__cli__:main"

[tool.uv.sources]
common = { path = "../common", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/buttercup"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = ["pytest>=8.3.4", "ruff>=0.9.2", "mypy>=1.15.0"]

[tool.coverage.run]
source = ["src/buttercup"]
omit = ["*/tests/*", "*/__cli__.py", "*/_cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "COM812", "ISC001",  # Formatter conflicts
    # Temporarily disabled for standardization PR - re-enable after refactoring:
    "I001",   # Import block is un-sorted or un-formatted
    "E501",   # Line too long
    "W291",   # Trailing whitespace
    "UP006",  # Use built-in collection types for type annotations
    "UP015",  # Unnecessary mode argument
    "UP035",  # Import from modern locations instead of deprecated typing
    "UP045",  # Use X | None for type annotations
    "UP046",  # Use modern generic class syntax
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]  # Allow asserts, no docstrings in tests
"*/__cli__.py" = ["T201"]  # Allow print in CLI modules

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = "buttercup"
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = []
